# places2go

./: .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  AZURE_DEPLOYMENT.md  BOT_RESPONSE_PLAN.md  CONTRIBUTING.md  LICENSE  PHASE1_COMPLETE.md  PHASE3_PREP_SUMMARY.md  README.md  README_OLD.md  READY_TO_PUSH.md  ROADMAP.md  WIKI_COMPLETE.md  WIKI_SUMMARY.md  app.py  pyproject.toml  requirements.txt  staticwebapp.config.json  temp_develop_dashboard.py
.build/visualizations/: README.md
.github/: GITHUB_ISSUES.md  README.md  SETTINGS_CLEANUP.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  test_task.md
.github/workflows/: ci.yml  deploy.yml
config/: .env.development  .env.production  .env.staging  README.md
dash_app/: README.md  __init__.py
dash_app/callbacks/: __init__.py  chart_callbacks.py  filter_callbacks.py
dash_app/components/: __init__.py  charts.py  filters.py  layout.py
data/: README.md  dummy_data.csv  issues.csv
data/destinations/: cost_of_living.csv  destinations.csv
deployment/: .gitkeep  404.html  index.html
docs/: API_INTEGRATION.md  DEPLOYMENT.md  DEPLOYMENT_QUICKREF.md  MONITORING.md  PERFORMANCE.md  README.md  REORGANIZATION_PLAN.md  ROLLBACK.md  branching_strategy.md  task_breakdown.md  validation_rules.md
scripts/: create_issues.py  create_visualization_issues.py  create_wiki.ps1  dashboard.py  demo_api_integration.py  demo_data_loader.py  demo_preferences.py  exceptions.py  profile_performance.py  push_to_github.ps1  validate_deployment.py
tests/: test_alicante_weather.py  test_api_clients.py  test_charts.py  test_cost_comparison.py  test_dash_components.py  test_data.py  test_data_loader.py  test_destinations_map.py  test_exceptions.py  test_flight_prices.py  test_integration.py  test_performance.py  test_preferences_panel.py  test_user_preferences.py  test_validation.py  test_weather_forecast.py
wiki/: Architecture.md  Contributing.md  Development-Guide.md  FAQ.md  Home.md  Installation.md  Quick-Start.md  README.md  Roadmap.md
(+53 files in other folders)
